RESOLVED FIXED77140
[chromium] WebGestureEvent does not have TapDown and DoubleTap gestures
https://bugs.webkit.org/show_bug.cgi?id=77140
Summary [chromium] WebGestureEvent does not have TapDown and DoubleTap gestures
Sadrul Habib Chowdhury
Reported 2012-01-26 14:23:46 PST
PlatformGestureEvent recognizes GestureTapDown and GestureDoubleTap gestures. However, chromium's WebGestureEvent does not.
Attachments
patch (3.33 KB, patch)
2012-01-26 14:25 PST, Sadrul Habib Chowdhury
no flags
Sadrul Habib Chowdhury
Comment 1 2012-01-26 14:25:16 PST
WebKit Review Bot
Comment 2 2012-01-26 14:28:29 PST
Please wait for approval from fishd@chromium.org before submitting because this patch contains changes to the Chromium public API.
Robert Kroeger
Comment 3 2012-01-26 14:29:12 PST
looks fine to me.
WebKit Review Bot
Comment 4 2012-01-26 16:43:04 PST
Comment on attachment 124179 [details] patch Clearing flags on attachment: 124179 Committed r106063: <http://trac.webkit.org/changeset/106063>
WebKit Review Bot
Comment 5 2012-01-26 16:43:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.