Add GestureTapDown and GestureDoubleTap gesture types to WebGestureEvent. https://bugs.webkit.org/show_bug.cgi?id=77140

Patch by Sadrul Habib Chowdhury <sadrul@chromium.org> on 2012-01-26
Reviewed by Darin Fisher.

* public/WebInputEvent.h:
():
* src/WebInputEventConversion.cpp:
(WebKit::PlatformGestureEventBuilder::PlatformGestureEventBuilder):
* src/WebPopupMenuImpl.cpp:
(WebKit::WebPopupMenuImpl::handleInputEvent):
* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::handleInputEvent):

Canonical link: https://commits.webkit.org/94047@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106063 268f45cc-cd09-0410-ab3c-d52691b4dbfc