Source/WebKit/chromium/public/WebInputEvent.h
@@ -107,6 +107,8 @@ public:
         GestureFlingStart,
         GestureFlingCancel,
         GestureTap,
+        GestureTapDown,
+        GestureDoubleTap,
 
         // WebTouchEvent
         TouchStart,
